# simple-frame-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: create_testcase.rs  dump_backtrace.rs  dump_sframe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: find_fde.rs  find_fre.rs  fuzzer.rs  parse_sframe.rs
lib/: Cargo.toml  build_binutils.sh  create_testcase.py  create_testcase.sh  create_testcase_multi.sh
lib/examples/: create_testcase.rs  dump_backtrace.rs  dump_sframe.rs
lib/src/: lib.rs  v1.rs  v2.rs  v3.rs
lib/testcases/: cfi-sframe-aarch64-1-2.40.json  cfi-sframe-aarch64-1-2.45.json  cfi-sframe-aarch64-1-2.46.json  cfi-sframe-aarch64-2-2.40.json  cfi-sframe-aarch64-2-2.45.json  cfi-sframe-aarch64-2-2.46.json  cfi-sframe-aarch64-3-2.45.json  cfi-sframe-aarch64-3-2.46.json  cfi-sframe-aarch64-4-2.46.json  cfi-sframe-aarch64-pac-ab-key-1-2.40.json  cfi-sframe-aarch64-pac-ab-key-1-2.45.json  cfi-sframe-aarch64-pac-ab-key-1-2.46.json  cfi-sframe-aarch64-ra-undefined-1-2.46.json  cfi-sframe-common-1-2.40.json  cfi-sframe-common-1-2.45.json  cfi-sframe-common-1-2.46.json  cfi-sframe-common-10-2.45.json  cfi-sframe-common-10-2.46.json  cfi-sframe-common-11-2.45.json  cfi-sframe-common-11-2.46.json  cfi-sframe-common-12-2.46.json  cfi-sframe-common-13-2.46.json  cfi-sframe-common-1b-2.45.json  cfi-sframe-common-1b-2.46.json  cfi-sframe-common-1c-2.45.json  cfi-sframe-common-1c-2.46.json  cfi-sframe-common-1d-2.46.json  cfi-sframe-common-2-2.40.json  cfi-sframe-common-2-2.45.json  cfi-sframe-common-2-2.46.json  cfi-sframe-common-3-2.40.json  cfi-sframe-common-3-2.45.json  cfi-sframe-common-3-2.46.json  cfi-sframe-common-4-2.40.json  cfi-sframe-common-4-2.45.json  cfi-sframe-common-4-2.46.json  cfi-sframe-common-5-2.40.json  cfi-sframe-common-5-2.45.json  cfi-sframe-common-5-2.46.json  cfi-sframe-common-6-2.40.json  (+59 more)
lib/tests/: comparison_tests.rs  tests.rs
spec/: download.sh
src/: lib.rs
sys/: Cargo.toml  build.rs
tests/: tests.rs
