[package]
name = "simple-frame-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
fallible-iterator = "0.3.0"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.100"
object = "0.37.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[example]]
name = "dump_sframe"
