[package]
name = "simple-frame-rs"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/jiegec/simple-frame-rs"
description = "Parse SFrame (Simple Frame) stack trace information"

[dependencies]
bitflags = "2.9.4"
fallible-iterator = "0.3.0"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.100"
object = "0.37.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[example]]
name = "dump_sframe"
